<resources>
    <string name="app_name">OnShortConfig</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="your_home_service_was_disconnected">Your home service was disconnected. Please check and try again.</string>
    <string name="hm_error_api_network_timeout">Network timeout, please check your internet connection and try again.</string>
    <string name="hm_error_api_no_internet">Network error, please check your internet connection and try again.</string>
    <string name="hm_error_api_unknown">Unknown error while processing your request.</string>
    <string name="hm_error_api_unknown_server">Internal server error, please contact administrator.</string>
    <string name="connection_timed_out">Connection timed out. Please try again.</string>

    <string name="action_settings">Settings</string>
    <string name="action_get_ver">Version</string>
    <string name="hello_world">Hello world!</string>
    <string name="text_ssid">ssid</string>
    <string name="text_psw">password</string>
    <string name="btn_conf">Start Configuration</string>
    <string name="btn_stop_conf">Stop Configuration</string>
    <string name="menu_cus_data">Custom</string>
    <string name="menu_ssid_psw">ssid psw config</string>
    <string name="title_activity_cus_data">CusDataActivity</string>
    <string name="text_cus_data">Custom Data:</string>
    <string name="btn_cus_data">Send Data</string>
    <string name="btn_stop_cus_data">Stop</string>
    <string name="title_activity_one_shot">OneShotActivity</string>
    <string name="lbl_hint_mail">e.g. email@address.com</string>
    <string name="lbl_old_password">Old password</string>
    <string name="lbl_new_password">New password</string>
    <string name="lbl_confirm_new_password">Confirm new password</string>
    <string name="lbl_hint_pwd">At least 8 characters</string>
    <string name="lbl_hint_pin_code">e.g. 888888</string>
    <string name="lbl_hint_ip">ip e.g. 192.168.123.1</string>
    <string name="lbl_hint_user_name">e.g. username</string>
    <string name="lbl_hint_name">e.g. your name</string>
    <string name="lbl_connect">Connect</string>
    <string name="lbl_which_ssid_do_you_use">Which SSID do you use?</string>
    <string name="lbl_scan">Scan</string>

</resources>